--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "bun --watch --smol run ./index.ts"
+    "dev": "bun --watch --smol run ./src/index.ts",
+    "build": "bun build --compile --target=bun src",
+    "vercel-build": "bun build --target=bun --outdir=dist src/index.ts"
   },
   "devDependencies": {
     "@types/bun": "latest",
