--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun --watch --smol run ./src/index.ts",
     "build": "bun build --compile --target=bun src",
-    "vercel-build": "bun build --target=bun --outdir=api src/index.ts"
+    "vercel-build": "bun build --target=bun --outdir=api ./src/*"
   },
   "devDependencies": {
     "@types/bun": "latest",
