--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun --watch --smol run ./src/index.ts",
-    "vercel-build": "cd .. && pwd && ls && bun build --target=bun --outdir=api ./src/*"
+    "vercel-build": "cd .. && bun install && pwd && ls && bun build --target=bun --outdir=api ./src/*"
   },
   "devDependencies": {
     "@types/bun": "latest",
