--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "bun --watch --smol run ./src/index.ts",
-    "vercel-build": "cd .. && bun install && pwd && ls && bun build --target=bun --outdir=api ./src/*"
+    "build": "bun build --target=node --outdir=api ./src/*",
+    "vercel-build": "echo 'should not try to build'"
   },
   "devDependencies": {
     "@types/bun": "latest",
