--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,9 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "include": [
+    "./src/api/*.ts",
+    "./src/*.ts"
+  ]
 }
